target/generated-sources/antlr4/AsplParser.java
// Generated from Aspl.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AsplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T_SEARCH=8, T_EVAL=9, 
		T_SOURCE=10, T_REGEX=11, T_WILDCARD=12, T_DATEHISTOGRAM=13, T_HISTOGRAM=14, 
		T_STATS=15, T_BUCKET=16, T_SELECT=17, T_BY=18, T_DO=19, T_NOT=20, T_AND=21, 
		T_OR=22, T_SORT=23, T_ASC=24, T_DESC=25, T_LIMIT=26, T_PIPE=27, T_PIPE2=28, 
		T_LP=29, T_RP=30, T_AMP2=31, T_EQ=32, T_EQ2=33, T_EQ3=34, T_NEQ=35, T_LT=36, 
		T_LTE=37, T_GT=38, T_GTE=39, T_EXCL=40, T_COMMA=41, IDENTIFIER=42, WS=43, 
		COMMENT=44, LINE_COMMENT=45, DECIMAL_LITERAL=46, HEX_LITERAL=47, OCT_LITERAL=48, 
		BINARY_LITERAL=49, FLOAT_LITERAL=50, HEX_FLOAT_LITERAL=51, BOOL_LITERAL=52, 
		CHAR_LITERAL=53, STRING_LITERAL=54, NULL_LITERAL=55;
	public static final int
		RULE_sections = 0, RULE_sourceStatement = 1, RULE_searchStatements = 2, 
		RULE_searchStatement = 3, RULE_sortStatement = 4, RULE_sortField = 5, 
		RULE_limitStatement = 6, RULE_statsStatement = 7, RULE_evalStatement = 8, 
		RULE_bucketStatement = 9, RULE_statsGroupingColumns = 10, RULE_statsParameters = 11, 
		RULE_statsFunctions = 12, RULE_statsFunction = 13, RULE_booleanExpression = 14, 
		RULE_primaryBooleanExpression = 15, RULE_literal = 16, RULE_integerLiteral = 17, 
		RULE_floatLiteral = 18, RULE_stringLiteral = 19, RULE_expression = 20, 
		RULE_expressionList = 21, RULE_methodCall = 22, RULE_primary = 23;
	public static final String[] ruleNames = {
		"sections", "sourceStatement", "searchStatements", "searchStatement", 
		"sortStatement", "sortField", "limitStatement", "statsStatement", "evalStatement", 
		"bucketStatement", "statsGroupingColumns", "statsParameters", "statsFunctions", 
		"statsFunction", "booleanExpression", "primaryBooleanExpression", "literal", 
		"integerLiteral", "floatLiteral", "stringLiteral", "expression", "expressionList", 
		"methodCall", "primary"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'++'", "'--'", "'*'", "'/'", "'%'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'|'", "'||'", "'('", "')'", "'&&'", "'='", "'=='", 
		"'==='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "','", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "T_SEARCH", "T_EVAL", 
		"T_SOURCE", "T_REGEX", "T_WILDCARD", "T_DATEHISTOGRAM", "T_HISTOGRAM", 
		"T_STATS", "T_BUCKET", "T_SELECT", "T_BY", "T_DO", "T_NOT", "T_AND", "T_OR", 
		"T_SORT", "T_ASC", "T_DESC", "T_LIMIT", "T_PIPE", "T_PIPE2", "T_LP", "T_RP", 
		"T_AMP2", "T_EQ", "T_EQ2", "T_EQ3", "T_NEQ", "T_LT", "T_LTE", "T_GT", 
		"T_GTE", "T_EXCL", "T_COMMA", "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT", 
		"DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
		"HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
		"NULL_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aspl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AsplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SectionsContext extends ParserRuleContext {
		public SourceStatementContext sourceStatement() {
			return getRuleContext(SourceStatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AsplParser.EOF, 0); }
		public List<TerminalNode> T_PIPE() { return getTokens(AsplParser.T_PIPE); }
		public TerminalNode T_PIPE(int i) {
			return getToken(AsplParser.T_PIPE, i);
		}
		public List<SearchStatementContext> searchStatement() {
			return getRuleContexts(SearchStatementContext.class);
		}
		public SearchStatementContext searchStatement(int i) {
			return getRuleContext(SearchStatementContext.class,i);
		}
		public SortStatementContext sortStatement() {
			return getRuleContext(SortStatementContext.class,0);
		}
		public LimitStatementContext limitStatement() {
			return getRuleContext(LimitStatementContext.class,0);
		}
		public List<EvalStatementContext> evalStatement() {
			return getRuleContexts(EvalStatementContext.class);
		}
		public EvalStatementContext evalStatement(int i) {
			return getRuleContext(EvalStatementContext.class,i);
		}
		public StatsStatementContext statsStatement() {
			return getRuleContext(StatsStatementContext.class,0);
		}
		public BucketStatementContext bucketStatement() {
			return getRuleContext(BucketStatementContext.class,0);
		}
		public SectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionsContext sections() throws RecognitionException {
		SectionsContext _localctx = new SectionsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sections);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			sourceStatement();
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					match(T_PIPE);
					setState(50);
					searchStatement();
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(56);
				match(T_PIPE);
				setState(57);
				sortStatement();
				}
				break;
			}
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(60);
				match(T_PIPE);
				setState(61);
				limitStatement();
				}
				break;
			}
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					match(T_PIPE);
					setState(65);
					evalStatement();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T_PIPE) {
				{
				setState(71);
				match(T_PIPE);
				setState(72);
				statsStatement();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T_PIPE) {
					{
					setState(73);
					match(T_PIPE);
					setState(74);
					bucketStatement();
					}
				}

				}
			}

			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceStatementContext extends ParserRuleContext {
		public TerminalNode T_SOURCE() { return getToken(AsplParser.T_SOURCE, 0); }
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public SourceStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSourceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSourceStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSourceStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceStatementContext sourceStatement() throws RecognitionException {
		SourceStatementContext _localctx = new SourceStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T_SOURCE);
			setState(82);
			stringLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchStatementsContext extends ParserRuleContext {
		public List<SearchStatementContext> searchStatement() {
			return getRuleContexts(SearchStatementContext.class);
		}
		public SearchStatementContext searchStatement(int i) {
			return getRuleContext(SearchStatementContext.class,i);
		}
		public List<TerminalNode> T_PIPE() { return getTokens(AsplParser.T_PIPE); }
		public TerminalNode T_PIPE(int i) {
			return getToken(AsplParser.T_PIPE, i);
		}
		public SearchStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_searchStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSearchStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSearchStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSearchStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SearchStatementsContext searchStatements() throws RecognitionException {
		SearchStatementsContext _localctx = new SearchStatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_searchStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			searchStatement();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_PIPE) {
				{
				{
				setState(85);
				match(T_PIPE);
				setState(86);
				searchStatement();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchStatementContext extends ParserRuleContext {
		public TerminalNode T_SEARCH() { return getToken(AsplParser.T_SEARCH, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public SearchStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_searchStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSearchStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSearchStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSearchStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SearchStatementContext searchStatement() throws RecognitionException {
		SearchStatementContext _localctx = new SearchStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_searchStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T_SEARCH);
			setState(93);
			booleanExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortStatementContext extends ParserRuleContext {
		public TerminalNode T_SORT() { return getToken(AsplParser.T_SORT, 0); }
		public List<SortFieldContext> sortField() {
			return getRuleContexts(SortFieldContext.class);
		}
		public SortFieldContext sortField(int i) {
			return getRuleContext(SortFieldContext.class,i);
		}
		public List<TerminalNode> T_COMMA() { return getTokens(AsplParser.T_COMMA); }
		public TerminalNode T_COMMA(int i) {
			return getToken(AsplParser.T_COMMA, i);
		}
		public SortStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSortStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSortStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSortStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortStatementContext sortStatement() throws RecognitionException {
		SortStatementContext _localctx = new SortStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sortStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T_SORT);
			setState(96);
			sortField();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_COMMA) {
				{
				{
				setState(97);
				match(T_COMMA);
				setState(98);
				sortField();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortFieldContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AsplParser.IDENTIFIER, 0); }
		public TerminalNode T_ASC() { return getToken(AsplParser.T_ASC, 0); }
		public TerminalNode T_DESC() { return getToken(AsplParser.T_DESC, 0); }
		public SortFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterSortField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitSortField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitSortField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortFieldContext sortField() throws RecognitionException {
		SortFieldContext _localctx = new SortFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sortField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(IDENTIFIER);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T_ASC || _la==T_DESC) {
				{
				setState(105);
				_la = _input.LA(1);
				if ( !(_la==T_ASC || _la==T_DESC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LimitStatementContext extends ParserRuleContext {
		public TerminalNode T_LIMIT() { return getToken(AsplParser.T_LIMIT, 0); }
		public List<IntegerLiteralContext> integerLiteral() {
			return getRuleContexts(IntegerLiteralContext.class);
		}
		public IntegerLiteralContext integerLiteral(int i) {
			return getRuleContext(IntegerLiteralContext.class,i);
		}
		public List<TerminalNode> T_COMMA() { return getTokens(AsplParser.T_COMMA); }
		public TerminalNode T_COMMA(int i) {
			return getToken(AsplParser.T_COMMA, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(AsplParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AsplParser.IDENTIFIER, i);
		}
		public List<TerminalNode> T_ASC() { return getTokens(AsplParser.T_ASC); }
		public TerminalNode T_ASC(int i) {
			return getToken(AsplParser.T_ASC, i);
		}
		public List<TerminalNode> T_DESC() { return getTokens(AsplParser.T_DESC); }
		public TerminalNode T_DESC(int i) {
			return getToken(AsplParser.T_DESC, i);
		}
		public LimitStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_limitStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterLimitStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitLimitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitLimitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LimitStatementContext limitStatement() throws RecognitionException {
		LimitStatementContext _localctx = new LimitStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_limitStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T_LIMIT);
			setState(109);
			integerLiteral();
			setState(110);
			match(T_COMMA);
			setState(111);
			integerLiteral();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T_ASC || _la==T_DESC) {
				{
				setState(112);
				_la = _input.LA(1);
				if ( !(_la==T_ASC || _la==T_DESC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T_COMMA) {
				{
				{
				setState(115);
				match(T_COMMA);
				setState(116);
				match(IDENTIFIER);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T_ASC || _la==T_DESC) {
					{
					setState(117);
					_la = _input.LA(1);
					if ( !(_la==T_ASC || _la==T_DESC) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatsStatementContext extends ParserRuleContext {
		public Token op;
		public StatsFunctionsContext statsFunctions() {
			return getRuleContext(StatsFunctionsContext.class,0);
		}
		public TerminalNode T_STATS() { return getToken(AsplParser.T_STATS, 0); }
		public TerminalNode T_BY() { return getToken(AsplParser.T_BY, 0); }
		public StatsGroupingColumnsContext statsGroupingColumns() {
			return getRuleContext(StatsGroupingColumnsContext.class,0);
		}
		public StatsParametersContext statsParameters() {
			return getRuleContext(StatsParametersContext.class,0);
		}
		public TerminalNode T_DATEHISTOGRAM() { return getToken(AsplParser.T_DATEHISTOGRAM, 0); }
		public TerminalNode T_DO() { return getToken(AsplParser.T_DO, 0); }
		public TerminalNode T_HISTOGRAM() { return getToken(AsplParser.T_HISTOGRAM, 0); }
		public StatsStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statsStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).enterStatsStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsplListener ) ((AsplListener)listener).exitStatsStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AsplVisitor ) return ((AsplVisitor<? extends T>)visitor).visitStatsStatement(this);
			else return visitor.visitChildren(this);
		}
	}
